# cz-github-conventional-commits

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .vale.ini  Justfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.vale/config/vocabularies/cz-github-conventional/: accept.txt
.vale/config/vocabularies/cz-github-conventional-commits/: accept.txt
src/cz_github_conventional/: github_conventional_cz.py
src/cz_github_conventional_commits/: __init__.py  github_conventional_commits.py
tests/: conftest.py  test_github_conventional_commits.py  test_github_conventional_cz.py
